--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,12 @@
 [user]
 	name = Nana Adjei Manu
 	email = claeusdev@gmail.com
-[pull]
-	rebase = true
+[url "git@github.com:"]
+	insteadOf = https://github.com/
 [init]
 	defaultBranch = main
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
