--- a/.gitconfig
+++ b/.gitconfig
@@ -12,3 +12,7 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+[pull]
+	rebase = true
+[fetch]
+	prune = true
