--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ bind-key C-a send-prefix
 bind R source-file ~/.tmux.conf
 
 # set mouse mode
+set -g mouse on
 bind m set -g mouse on
 bind M set -g mouse off
 
