--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set -g default-terminal "screen-256color"
 # Rebind prefix key
 unbind C-b
 set-option -g prefix C-a
@@ -6,13 +7,25 @@ bind-key C-a send-prefix
 # Easy reloading
 bind R source-file ~/.tmux.conf
 
+# change split keys
+unbind %
+bind | split-window -h
+unbind '"'
+bind - split-window -v
+
+#  resize panes 
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
+bind -r m resize-pane -Z
+
 # set mouse mode
 set -g mouse on
-bind m set -g mouse on
-bind M set -g mouse off
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 
